--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,39 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.scren {
+  width: 70vw;
+  height: 20px;
+  background-color: blue;
+  /* top-left | top-right | bottom-right | bottom-left */
+  border-radius: 50% 50% 4px 4px;
+  margin-bottom: 4vh;
+}
+
+.App {
+  margin-top: 4vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.cinema {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.row {
+  flex-direction: row;
+}
+
+.seat {
+  padding: 10px;
+}
+
+.set_img {
+  width: 30px;
+  height: 30px;
+}
